; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_decimal32.c_decimal32Canonical.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_decimal32.c_decimal32Canonical.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEC_INIT_DECIMAL32 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @decimal32Canonical(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @DEC_INIT_DECIMAL32, align 4
  %8 = call i32 @decContextDefault(i32* %6, i32 %7)
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @decimal32ToNumber(i32* %9, i32* %5)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @decimal32FromNumber(i32* %11, i32* %5, i32* %6)
  %13 = load i32*, i32** %3, align 8
  ret i32* %13
}

declare dso_local i32 @decContextDefault(i32*, i32) #1

declare dso_local i32 @decimal32ToNumber(i32*, i32*) #1

declare dso_local i32 @decimal32FromNumber(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
